import "mapreduce/yt/interface/protos/extension.proto";

package NRTLog;

// If changed, please do
// ~/arcadia/contrib/tools/protoc/protoc --descriptor_set_out ~/arcadia/logfeller/configs/parsers/megamind-log.desc --proto_path ~/arcadia --proto_path ~/arcadia/contrib/libs/protobuf --include_imports -I. megamind_log.proto
message TMegamindLog {
    optional uint64 Timestamp = 1           [(NYT.key_column_name) = "Timestamp"];
    optional string ReqId = 2               [(NYT.key_column_name) = "ReqId"];
    optional string Message = 3             [(NYT.column_name) = "Message"];
    optional string Severity = 4            [(NYT.column_name) = "Severity"];
    optional string File = 5                [(NYT.column_name) = "File"];
    optional uint64 Line = 6                [(NYT.column_name) = "Line"];
    optional string NannyService = 7        [(NYT.column_name) = "NannyService"];
    optional string HypothesisNumber = 8    [(NYT.column_name) = "HypothesisNumber"];
}
